base/infraestructure/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http(s)://*.nuamexchange.com"
    #nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: sso-devops.nuamexchange.com,sso-devops-admin.nuamexchange.com
  labels:
    app: devops-keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: sso-devops.nuamexchange.com
      http:
        paths:
          - backend:
              service:
                name: devops-keycloak-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: sso-devops-admin.nuamexchange.com
      http:
        paths:
          - backend:
              service:
                name: devops-keycloak-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - sso-devops.nuamexchange.com
      secretName: devops-keycloak-tls
    - hosts:
      - sso-devops-admin.nuamexchange.com
      secretName: devops-admin-keycloak-tls
